[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["David <david@dzhy.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
tree-sitter = "^0.24.0"
tree-sitter-java = "^0.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
